Fixed weird dual scrollbar issue

--- a/styles.less
+++ b/styles.less
@@ -206,15 +206,11 @@ footer#base {
 	position:relative;
 	
 	p.meta {
-		position:absolute;
-		left:0
-		top:0;
+		float:left;
 	}
 	
 	p.credit {
-		position:absolute;
-		right:0;
-		top:10px;
+		float:right;
 	}
 	
 	a {
